--- a/qini/_opera/kinozal.css
+++ b/qini/_opera/kinozal.css
@@ -1,1 +1,5 @@
-div#MarketGidComposite405 { display:none }
+div#MarketGidComposite405 { display:none !important; }
+div#lx_7067 { display:none !important; }
+div#footer { display:none !important; }
+div.logo_new { display:none !important; }
+div.rb_new { display:none !important; }
