--- a/qini/_opera/kinozal.css
+++ b/qini/_opera/kinozal.css
@@ -1,6 +1,8 @@
 div#MarketGidComposite405 { display:none !important; }
 div#MarketGidScriptRootC32915 { display:none !important; }
 div#MarketGidComposite21786 { display:none !important; }
+div#MarketGidScriptRootC599051 { display:none !important; }
+div#MarketGidComposite599051 { display:none !important; }
 div#lx_7067 { display:none !important; }
 zdiv#footer { background:none !important; }
 div#footer .l_bar { display:none !important; }
