--- a/qini/_opera/zamunda.table100.css
+++ b/qini/_opera/zamunda.table100.css
@@ -25,6 +25,8 @@ table.test {
 *[title~="Пайнер"] { display : none }
 *[title~="Payner"] { display : none }
 *[title~="Голые"] { display : none }
+*[title~="такъми"] { display : none }
+
 
 *#div1 { display : none }
 iframe { display : none }
